  * Declare compliance with Debian Policy 4.1.2. (No changes needed.)
  * Consider formiko as better replacement for retext.
  * Prefer ntpsec over ntp.
  * Add lintian overrides for testsuite-autopkgtest-missing and
    binary-package-depends-on-toolchain-package.
  * Drop hardening-includes (and the according lintian override) from
    abe-packaging-dev.

 -- Axel Beckert <abe@debian.org>  Fri, 15 Dec 2017 05:30:55 +0100

abe-metapackages (17.4.1) unstable; urgency=medium

  * Enforce usage of gz instead of xz for .deb archive members as long as
    Wheezy is supported.

 -- Axel Beckert <abe@deuxchevaux.org>  Wed, 22 Nov 2017 04:39:27 +0100

abe-metapackages (17.4) unstable; urgency=medium

  * abe-laptop now prefers abe-desktop-i3 over -ratpoison and -awesome.
  * Prefer sshguard over fail2ban due missing IPv6 support in fail2ban.
  * Prefer lynx over lynx-cur instead of vice versa.
  * Install some apt-related packages only if only old apt versions are
    available.
  * Declare compliance with Debian Policy 4.1.1.
    + Change Priority to optional.
    + Change DEP5 format URL in debian/copyright to HTTPS.
  * Bump copyright years.
  * Set "Rules-Requires-Root: no".
  * Ignore some more recent debhelper build artefacts.
  * Prefer fonts-atarismall over ttf-atarismall.
  * Update abe-x-browsers:
    + Add qutebrowser as alternative to conkeror.
    + Don't enforce preferred browsers on Ubuntu.
    + Add firefox-esr as alternative to iceweasel.
    + Recommend torbrowser-launcher.
    + Promote chromium to Recommendation.
    + Demote luakit, midori and the list of operas to Suggestions.
    + Add qupzilla as preferred alternative to arora.
    + Suggest vivaldi and otter-browser.
  * abe-text-browsers: Suggest edbrowse.
  * abe-desktop-extras:
    + Recommend telegram-desktop.
    + Suggest adb and fastboot.
    + Recommend transmission or at least a transmission remote control
      interface. Suggest transmission-daemon.