@@ -8,6 +8,8 @@ abe-metapackages (17.5) UNRELEASED; urgency=medium
     binary-package-depends-on-toolchain-package.
   * Drop hardening-includes (and the according lintian override) from
     abe-packaging-dev.
+  * Switch to debhelper compatibility level 11 and use a minimal
+    debian/rules file.
 
  -- Axel Beckert <abe@debian.org>  Fri, 15 Dec 2017 05:30:55 +0100
 
